# lotad

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  run-tests.yaml
lotad/: config.py  config_builder.py  config_wizard.py  connection.py  data_analysis.py  db_compare.py  logger.py  utils.py
test/: custom_query_test.py  data_drift_test.py
