[project]
name = "lotad"
version = "0.0.1"
description = "Lotad helps you identify schema changes, data differences, and structural modifications between database versions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "orjson>=3.10.13",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "xxhash>=3.5.0",
]
